Fix top navigation on Safari

--- a/_sass/styles.sass
+++ b/_sass/styles.sass
@@ -49,7 +49,7 @@ li
 .middot
   background: white
   border-radius: 7px
-  margin: 0 42px
+  margin: 0 40px
   position: relative
   top: 7px
   vertical-align: top
